--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://tongyinn.github.io/without-auth0-htn-frontend-challenge-2023",
   "name": "without-auth0-htn-frontend-challenge-2023",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
